--- a/Libplanet/Libplanet.csproj
+++ b/Libplanet/Libplanet.csproj
@@ -1,6 +1,4 @@
-<Project
-  xmlns="http://schemas.microsoft.com/developer/msbuild/2003"
-  Sdk="Microsoft.NET.Sdk">
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <PackageId>Libplanet</PackageId>
     <Title>Libplanet</Title>
@@ -71,9 +69,7 @@ https://docs.libplanet.io/</Description>
     <PackageReference Include="Menees.Analyzers.2017" Version="2.0.3">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference
-      Include="Microsoft.DotNet.Analyzers.Compatibility"
-      Version="0.2.12-alpha">
+    <PackageReference Include="Microsoft.DotNet.Analyzers.Compatibility" Version="0.2.12-alpha">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>
         runtime; build; native; contentfiles; analyzers; buildtransitive
@@ -94,6 +90,7 @@ https://docs.libplanet.io/</Description>
       </IncludeAssets>
     </PackageReference>
     <PackageReference Include="System.Collections.Immutable" Version="1.7.*" />
+    <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
     <PackageReference Include="System.Text.Json" Version="4.6.0" />
     <PackageReference Include="Zio" Version="0.7.4" />
   </ItemGroup>
@@ -101,9 +98,7 @@ https://docs.libplanet.io/</Description>
   <!-- The above hacky trick is borrowed from the following Stack Overflow
   answer: https://stackoverflow.com/a/45004898/383405 (see #2). -->
   <ItemGroup>
-    <ProjectReference
-      Include="..\Libplanet.Stun\Libplanet.Stun.csproj"
-      PrivateAssets="All" />
+    <ProjectReference Include="..\Libplanet.Stun\Libplanet.Stun.csproj" PrivateAssets="All" />
   </ItemGroup>
 
   <PropertyGroup>
