--- a/Libplanet.RocksDBStore/Libplanet.RocksDBStore.csproj
+++ b/Libplanet.RocksDBStore/Libplanet.RocksDBStore.csproj
@@ -14,6 +14,7 @@
   <PackageIcon>icon.png</PackageIcon>
   <LangVersion>8.0</LangVersion>
   <TargetFramework>netstandard2.0</TargetFramework>
+  <LangVersion>8</LangVersion>
   <RootNamespace>Libplanet.RocksDBStore</RootNamespace>
   <AssemblyName>Libplanet.RocksDBStore</AssemblyName>
   <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
